--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
-name: CI
+name: CI/CD
 
 on:
   push:
     branches:
-      - main
       - master
+      - main
   pull_request:
 
 jobs:
@@ -12,19 +12,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
       - name: Checkout code
         uses: actions/checkout@v3
+
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest
+
 
       - name: Run tests
         run: pytest -q
@@ -36,10 +40,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.CR_PAT }}
 
+
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/iris-streamlit:latest .
+          docker build -t ghcr.io/lole-21/iris-streamlit:latest .
+
 
       - name: Push Docker image
         run: |
-          docker push ghcr.io/${{ github.repository_owner }}/iris-streamlit:latest
+          docker push ghcr.io/lole-21/iris-streamlit:latest
