--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -30,7 +29,6 @@ jobs:
       - name: Run tests
         run: pytest -q
 
-
       - name: Log in to GHCR
         uses: docker/login-action@v2
         with:
@@ -47,3 +45,12 @@ jobs:
         run: |
           IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/iris-streamlit:latest
           docker push $IMAGE_NAME
+
+      - name: Make image public
+        if: success()
+        run: |
+          curl -X PATCH \
+            -H "Authorization: Bearer ${{ secrets.CR_PAT }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/user/packages/container/iris-streamlit \
+            -d '{"visibility":"public"}'
