--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,12 +38,12 @@ jobs:
 
       - name: Build Docker image
         run: |
-          IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/iris-streamlit:latest
+          IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/ASI/iris-streamlit:latest
           docker build -t $IMAGE_NAME .
 
       - name: Push Docker image
         run: |
-          IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/iris-streamlit:latest
+          IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/ASI/iris-streamlit:latest
           docker push $IMAGE_NAME
 
       - name: Make image public
