--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run tests
         run: pytest -q
 
-      - name: Log in to GHCR
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -38,10 +38,8 @@ jobs:
 
       - name: Build Docker image
         run: |
-          IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/asi/iris-streamlit:latest
-          docker build -t $IMAGE_NAME .
+          docker build -t ghcr.io/${{ github.repository_owner }}/asi/iris-streamlit:latest .
 
       - name: Push Docker image
         run: |
-          IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/asi/iris-streamlit:latest
-          docker push $IMAGE_NAME
+          docker push ghcr.io/${{ github.repository_owner }}/asi/iris-streamlit:latest
